main menu: styling and components 97fbfcd styling and cursor 92107a1 main menu: restart game 793eb3d setup menu title and button spacing 5223e2d main menu: buttons grid layout 63dfe07  main menu grid layout 33bd297 main menu: grid layout 1504cb8 Button component 66be4c3 showDialog <> winnerModal 373c820 stop countdown when game is won b434210 Game over pop-up handling 7669185 remove obsolete var 'timeout'

--- a/src/app/sass/dialogs.sass
+++ b/src/app/sass/dialogs.sass
@@ -1,6 +1,7 @@
 .message-container
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
-    font-size: 3rem
+    font-size: 2rem
+    text-align: center
     display: grid
     border-radius: 1rem
     background-color: #fff
@@ -13,6 +14,7 @@
     top: 50%
     opacity: 0
     transition: all 500ms
+    cursor: pointer
 
     .message.game-over, .message.you-won
         background-color: #fff
@@ -53,10 +55,66 @@
     .close-button.animate-in
         display: block
 
+.message-container.main-menu
+    display: grid
+    grid-template-columns: 1fr
+    grid-template-rows: 1fr 3fr 1fr
+    grid-template-areas: "dialog-title dialog-content dialog-footer"
+    overflow: none
+    justify-items: stretch
+    left: calc( 50% - 35vw)
+    width: 70vw
+    cursor: default
+
+    .dialog-title, .dialog-content
+        grid-column-start: 1
+
+    .dialog-title
+        grid-row-start: 1
+
+    .dialog-content
+        display: grid
+        grid-template-columns: 1fr 5fr 1fr
+        align-self: normal
+
+        .button-row
+            grid-column-start: 2
+            border-radius: 1em
+            box-shadow: 0 0.5em 1em 0.1em rgba(127,0,0,.2)
+            border-width: 0px
+            cursor: pointer
+
+            button
+                cursor: pointer
+                border: none
+                background-color: transparent
+                width: 100%
+                height: 100%
+                font-size: 60%
+                color: rgba(0, 0, 0, 0.7)
+                text-shadow: 2px 0px 10px rgba(0,100,100, 1)
+
+        .button-row:nth-child(1)
+            margin-bottom: .5em
+
+        .button-row:nth-child(2)
+            margin-bottom: 1em
+
+    &.animate-in
+        top: 10%
+        height: 80vw
+        transition: height 120ms
+
 .modal-overlay
     width: 100vw
     height: 100vh
     position: absolute
     top: 0
     left: 0
-    cursor: pointer
+    cursor: default
+    background-color: #000
+    opacity: 0
+
+    &.main-menu
+        transition: all 1.5s
+        opacity: .8
